@@ -75,7 +75,7 @@ public class HdfsLockFactoryTest extends SolrTestCaseJ4 {
     assertTrue("We could not get the lock when it should be available", success);
     success = lock.obtain();
     assertFalse("We got the lock but it should be unavailble", success);
-    lock.release();
+    lock.close();
     success = lock.obtain();
     assertTrue("We could not get the lock when it should be available", success);
     success = lock.obtain();
